<resources>
    <string name="app_name">Age Calculator</string>
    <string name="calculate">Calculate Your</string>
    <string name="age">Age</string>
    <string name="timePeriods">In Days</string>
    <string name="buttonTitle">Select Date</string>
    <string name="selectedDate">3/10/2021</string>
    <string name="selectedDateTitle">Selected Date</string>
    <string name="outputDays">Days Old</string>
    <string name="outputMonths">Months Old</string>
    <string name="outputYears">Years Old</string>
</resources>